{
  "version": 4,
  "terraform_version": "1.11.0",
  "serial": 19,
  "lineage": "084f912e-59a1-a932-8c88-06aa6aaaaccd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "flipkart_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f9901a8b86c10892",
            "arn": "arn:aws:ec2:ap-south-1:084375566370:elastic-ip/eipalloc-0f9901a8b86c10892",
            "association_id": "eipassoc-07a90738fe3279c42",
            "domain": "vpc",
            "id": "eipalloc-0f9901a8b86c10892",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-026443ab0accc3136",
            "private_dns": "ip-10-0-0-108.ap-south-1.compute.internal",
            "private_ip": "10.0.0.108",
            "public_dns": "ec2-15-206-224-140.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.206.224.140",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "flipkart_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f2ce9ce760bd7133",
            "arn": "arn:aws:ec2:ap-south-1:084375566370:instance/i-037eb62525f8c7f5d",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-037eb62525f8c7f5d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "windows",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01aa14cdcb0776e4a",
            "private_dns": "ip-10-0-0-22.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.22",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e3f672bf5626d514",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0a9daa73886c816e5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-044bd9b7bd5e53078",
            "tags": {
              "Name": "flipkart_private"
            },
            "tags_all": {
              "Name": "flipkart_private"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a9daa73886c816e5"
            ]
          },
          "dependencies": [
            "aws_security_group.flipkart_sg",
            "aws_subnet.flipkart_public_subnet",
            "aws_vpc.flipkart"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "flipkart_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f2ce9ce760bd7133",
            "arn": "arn:aws:ec2:ap-south-1:084375566370:instance/i-0c6c0701508d2ab5d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c6c0701508d2ab5d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "windows",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0803f3f50bcc2d99f",
            "private_dns": "ip-10-0-0-104.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.104",
            "public_dns": "ec2-3-108-190-216.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.108.190.216",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04db93ff2866ca192",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0a9daa73886c816e5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-044bd9b7bd5e53078",
            "tags": {
              "Name": "flipkart_public"
            },
            "tags_all": {
              "Name": "flipkart_public"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a9daa73886c816e5"
            ]
          },
          "dependencies": [
            "aws_security_group.flipkart_sg",
            "aws_subnet.flipkart_public_subnet",
            "aws_vpc.flipkart"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "flipkart_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:084375566370:internet-gateway/igw-0927abda1e52d9847",
            "id": "igw-0927abda1e52d9847",
            "owner_id": "084375566370",
            "tags": {
              "Name": "flipkart_internet_gateway"
            },
            "tags_all": {
              "Name": "flipkart_internet_gateway"
            },
            "vpc_id": "vpc-086034356e70cca49"
          },
          "dependencies": [
            "aws_vpc.flipkart"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "flipkart_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f9901a8b86c10892",
            "association_id": "eipassoc-07a90738fe3279c42",
            "connectivity_type": "public",
            "id": "nat-0e777030c653665ab",
            "network_interface_id": "eni-026443ab0accc3136",
            "private_ip": "10.0.0.108",
            "public_ip": "15.206.224.140",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-044bd9b7bd5e53078",
            "tags": {
              "Name": "flipkart_nat_gateway"
            },
            "tags_all": {
              "Name": "flipkart_nat_gateway"
            }
          },
          "dependencies": [
            "aws_eip.flipkart_nat_eip",
            "aws_internet_gateway.flipkart_gateway",
            "aws_subnet.flipkart_public_subnet",
            "aws_vpc.flipkart"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "flipkart_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:084375566370:route-table/rtb-09a333265d2b009f9",
            "id": "rtb-09a333265d2b009f9",
            "owner_id": "084375566370",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e777030c653665ab",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "flipkart_private_rt"
            },
            "tags_all": {
              "Name": "flipkart_private_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-086034356e70cca49"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.flipkart_nat_eip",
            "aws_internet_gateway.flipkart_gateway",
            "aws_nat_gateway.flipkart_nat",
            "aws_subnet.flipkart_public_subnet",
            "aws_vpc.flipkart"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "flipkart_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:084375566370:route-table/rtb-0bf7ef7c1f20da719",
            "id": "rtb-0bf7ef7c1f20da719",
            "owner_id": "084375566370",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0927abda1e52d9847",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "flipkart_public_rt"
            },
            "tags_all": {
              "Name": "flipkart_public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-086034356e70cca49"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.flipkart_gateway",
            "aws_vpc.flipkart"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "flipkart_private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0abcdd0c343e9dce1",
            "route_table_id": "rtb-09a333265d2b009f9",
            "subnet_id": "subnet-0bd5d05dbec7aa86a"
          },
          "dependencies": [
            "aws_eip.flipkart_nat_eip",
            "aws_internet_gateway.flipkart_gateway",
            "aws_nat_gateway.flipkart_nat",
            "aws_route_table.flipkart_private_rt",
            "aws_subnet.flipkart_private_subnet",
            "aws_subnet.flipkart_public_subnet",
            "aws_vpc.flipkart"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "flipkart_public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053d7953481dadb1d",
            "route_table_id": "rtb-0bf7ef7c1f20da719",
            "subnet_id": "subnet-044bd9b7bd5e53078"
          },
          "dependencies": [
            "aws_internet_gateway.flipkart_gateway",
            "aws_route_table.flipkart_public_rt",
            "aws_subnet.flipkart_public_subnet",
            "aws_vpc.flipkart"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "flipkart_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:084375566370:security-group/sg-0a9daa73886c816e5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a9daa73886c816e5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20250301092052563400000001",
            "name_prefix": "terraform-",
            "owner_id": "084375566370",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "flipkart_sg"
            },
            "tags_all": {
              "Name": "flipkart_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-086034356e70cca49"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.flipkart"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "flipkart_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:084375566370:subnet/subnet-0bd5d05dbec7aa86a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd5d05dbec7aa86a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "084375566370",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "flipkart_private_subnet"
            },
            "tags_all": {
              "Name": "flipkart_private_subnet"
            },
            "vpc_id": "vpc-086034356e70cca49"
          },
          "dependencies": [
            "aws_vpc.flipkart"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "flipkart_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:084375566370:subnet/subnet-044bd9b7bd5e53078",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-044bd9b7bd5e53078",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "084375566370",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "flipkart_public_subnet"
            },
            "tags_all": {
              "Name": "flipkart_public_subnet"
            },
            "vpc_id": "vpc-086034356e70cca49"
          },
          "dependencies": [
            "aws_vpc.flipkart"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "flipkart",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:084375566370:vpc/vpc-086034356e70cca49",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0b1de1b67176582e7",
            "default_route_table_id": "rtb-0af4a9c0b5d662bb1",
            "default_security_group_id": "sg-01bf51705430c6f7c",
            "dhcp_options_id": "dopt-058e9a881b0f2fa19",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-086034356e70cca49",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0af4a9c0b5d662bb1",
            "owner_id": "084375566370",
            "tags": {
              "Name": "flipkart-vpc"
            },
            "tags_all": {
              "Name": "flipkart-vpc"
            }
          }
        }
      ]
    }
  ]
}